fix: stat overlay styling is consistent across sites, independent of site CSS
Squashed commit of the following:

commit a17bad67a09a3a930933a81a6a79d68d4d1193b2
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Thu Jul 25 23:04:33 2019 +0100

    wip: styling fixes

commit c70256a8bed01d97187ee928cbd27409eeb0bde8
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Thu Jul 25 00:02:00 2019 +0100

    wip: add closing overlay

commit 82e169dea63344d236e1ae9cbf65f5743e00fa1b
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Wed Jul 24 23:43:56 2019 +0100

    wip: stats served to iframe

commit 0e26f96185da604136f9de3ada7d7a9b7e98a2de
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Wed Jul 24 22:39:52 2019 +0100

    wip: fix margin if hover text is on right of screen, remove unnecessary template

commit e847025b0ee38f68fc8e52ea7e6e75efac27436a
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Wed Jul 24 22:12:16 2019 +0100

    wip: reduce container div size to prevent interfering with pointer events

commit f4ee749a4b4218233bb17142fb47cd9e68818aa5
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 23 16:00:42 2019 +0100

    wip: opening animation reapplied

commit 8d5031fa8da9941acd6db3ab84e373888dbfcc0d
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 23 09:53:04 2019 +0100

    wip: iframe positioning fixed

commit 92515069d2c04aca1cadd849644674f08c1c71df
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Tue Jul 23 08:41:05 2019 +0100

    wip: iframe positioning and size

commit 35420f55a08aaaf974b5fa8f732e96ccd6698dd2
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Mon Jul 22 17:24:42 2019 +0100

    wip: further elaboration of initial approach with iframe

commit e9f57b69866f1d7922f69380296f0609ebea811d
Author: aajfranklin <aajfranklin@gmail.com>
Date:   Mon Jul 22 14:03:57 2019 +0100

    wip: set out initial approach

--- a/view/frame.css
+++ b/view/frame.css
@@ -1,14 +1,19 @@
-#click-and-roll-stat-overlay {
+#click-and-roll-frame-body {
+  margin: 0;
+}
+
+#click-and-roll-stat-display {
   background: white;
   border-radius: 5px;
+  box-shadow: darkslategrey 0 1px 2px;
   font-family: Arial, Helvetica, sans-serif;
-  height: 0;
-  overflow: hidden;
+  height: calc(100vh - 2px);
+  left: 2px;
+  overflow-y: auto;
   position: absolute;
   text-align: left;
   vertical-align: middle;
-  width: 50vw;
-  z-index: 1000000;
+  width: calc(100vw - 4px);
 }
 
 .reveal-from-top, .reveal-from-bottom {
@@ -27,12 +32,12 @@
 
 @keyframes reveal-from-top {
   from {height: 0;}
-  to {height: 50vh;}
+  to {height: calc(100vh - 2px);}
 }
 
 @keyframes reveal-from-bottom {
-  from {height: 0; margin-top: 50vh;}
-  to {height: 50vh; margin-top: 0;}
+  from {height: 0; margin-top: calc(100vh - 2px);}
+  to {height: calc(100vh - 2px); margin-top: 0;}
 }
 
 #click-and-roll-stat-overlay, #click-and-roll-stat-content {
@@ -46,10 +51,13 @@
 
 #click-and-roll-player-header {
   background: teal;
+  border-radius: 5px 5px 0 0;
   display: flex;
   height: fit-content;
   justify-content: space-between;
-  width: 100%;
+  position: fixed;
+  width: calc(100vw - 4px);
+  z-index: 1;
 }
 
 #click-and-roll-player-name {
@@ -80,6 +88,10 @@
 }
 
 #click-and-roll-player-profile {
+  position:relative;
+}
+
+#click-and-roll-player-profile-content {
   display: flex;
 }
 
@@ -113,6 +125,7 @@
 }
 
 #click-and-roll-stat-content {
+  margin-top: 37px;
   overflow: scroll;
 }
 
@@ -162,6 +175,7 @@
   color: lightslategrey;
   font-size: 10px;
   font-weight: bold;
+  text-align: left;
 }
 
 .click-and-roll-info-label {
